--- a/RobotPointPicker/index.html
+++ b/RobotPointPicker/index.html
@@ -26,7 +26,24 @@
     <div class="offset-grid"></div>
     <div class="gradient-border"></div>
 
-    <img class="field-img" src="img/field-2022-official.png" alt="PowerPlay field image">
+    <img id="field-img" src="img/field-2022-official.png" alt="PowerPlay field image">
+
+    <img id="robit" draggable="true" src="img/field-2022-kai-light.png" alt="Robit">
+
+    <div class="settings-container">
+      <div class="setting">
+        <h1 class="setting-desc">X</h1>
+        <h1 id="setting-x">0</h1>
+      </div>
+      <div class="setting">
+        <h1 class="setting-desc">Y</h1>
+        <h1 id="setting-y">0</h1>
+      </div>
+      <div class="setting">
+        <h1 class="setting-desc">Rotation</h1>
+        <h1 id="setting-r">90</h1>
+      </div>
+    </div>
 
     <script src="js/vendor/modernizr-3.11.2.min.js"></script>
     <script src="js/plugins.js"></script>
