--- a/RobotPointPicker/index.html
+++ b/RobotPointPicker/index.html
@@ -28,7 +28,9 @@
 
     <img id="field-img" src="img/field-2022-official.png" alt="PowerPlay field image">
 
-    <img id="robit" draggable="true" src="img/field-2022-kai-light.png" alt="Robit">
+    <div id="sizing-square" draggable="true"></div>
+
+    <img id="robit" draggable="true" src="img/FullAssem.png" alt="Robit">
 
     <div class="settings-container">
       <div class="setting">
